--- a/templates/Users/sideBar.html
+++ b/templates/Users/sideBar.html
@@ -6,7 +6,7 @@
     </form>
     <nav class="sidebar__nav">
         <ul> 
-            {% if path == 'main' %}
+            {% if path == 'main' %} 
             {% if permissions == 'admin' or permissions == "Profesor"  %}
             <li class="sidebar__tools">
                 <p>Herramientas<span class="material-symbols-outlined">build</span></p>
@@ -60,7 +60,7 @@
                 </a>
             </li>
             <li class="sidebar__item">
-                <a href="#" class="sidebar__item-link">
+                <a href="#" class="sidebar__item-link active">
                     <span class="material-symbols-outlined">partner_exchange</span>
                     <p>Prestamos</p>
                 </a>
