--- a/static/CSS/subusersStyles.css
+++ b/static/CSS/subusersStyles.css
@@ -13,7 +13,7 @@ label, .sidebar__nav {
 }
 
 .container {
-    margin: 0;
+    margin: 0; 
     padding: 0; 
 }
 
@@ -39,8 +39,13 @@ main {
     right: 0;
     background-image: url(../IMAGES/Escritorio.webp);
     background-size: cover;
+    overflow-y: auto;
 }
- 
+
+main:has(div.hidden) {
+    overflow-y: hidden;
+}
+
 aside:has(input[type="checkbox"]:checked) ~ main {
     width: calc(100dvw - 62px);
 }
@@ -50,6 +55,9 @@ aside:has(input[type="checkbox"]:checked) ~ main {
     height: calc(2rem + 44.78px);
     background-color: var(--fb-color);
     container-name: filter-bar;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
 }
 
 .filter-bar__filter-container {
@@ -141,7 +149,8 @@ aside:has(input[type="checkbox"]:checked) ~ main {
 .forms-container form {
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     height: 82.5dvh;
     width: 50%;
     padding: 0 40px;
@@ -154,13 +163,12 @@ aside:has(input[type="checkbox"]:checked) ~ main {
 .forms-container input[type="submit"], .forms-container input[type="button"] {
     background-color: var(--fb-color);
     color: #fff;
-    padding: 10px 45px;
+    padding: 7px 45px;
     border: 1px solid transparent;
     border-radius: 8px;
     font-family: inherit;
     font-weight: 600;
     text-transform: uppercase;
-    margin-top: 10px;
     cursor: pointer;
     transition: box-shadow .3s;
     outline: none;
@@ -174,7 +182,6 @@ aside:has(input[type="checkbox"]:checked) ~ main {
 .forms-container form input, form select, textarea {
     background-color: #eee;
     border: none;
-    margin: 8px 0;
     padding: 10px 15px;
     font-size: 13px;
     font-family: inherit;
@@ -188,8 +195,17 @@ form select {
 }
 
 textarea {
-    height: 30dvh;
+    height: 20dvh;
     resize: none;
+}
+
+.forms-container form.create-subuser div:has(input[type="file"]) {
+    width: 45%;
+}
+
+.forms-container form.create-subuser div:has(select) {
+    width: 45%;
+    margin-right: 10%;
 }
 
 .forms-container form input:focus, form select:focus, textarea:focus {
@@ -275,7 +291,6 @@ dialog button:hover {
 .subusers-table__container {
     width: 96%;
     height: auto;
-    max-height: calc(100% - calc(2rem + 44.78px) - 4.2rem);
     overflow-y: auto;
     padding: 2px;
     margin: 1.8% 2%;
@@ -367,6 +382,16 @@ td:first-child {
 
     textarea {
         height: 25dvh;
+    }
+
+    .forms-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .forms-container form {
+        height: auto;
     }
 }
 
