--- a/templates/Users/password_reset.html
+++ b/templates/Users/password_reset.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="{%static '/CSS/passwordResetStyles.css'%}">
-    <title>Comprobación Identidad</title>
+    <title>Comprobación Identidad - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Recuperación contraseña Log Inventory">
     <meta name="keywords" content="Recuperar cuenta Log Inventory, Log Inventory, cuenta Log Inventory">
