--- a/templates/Users/sideBar.html
+++ b/templates/Users/sideBar.html
@@ -66,9 +66,9 @@
                 </a>
             </li>
             <li class="sidebar__item">
-                <a href="#" class="sidebar__item-link">
+                <a href="{% url 'user_log' %}" class="sidebar__item-link">
                     <span class="material-symbols-outlined">event_note</span>
-                    <p>Transacciones</p>
+                    <p>Historial</p>
                 </a>
             </li>
             <li class="sidebar__item">
