--- a/templates/Users/log_users.html
+++ b/templates/Users/log_users.html
@@ -1,49 +1,67 @@
 {% load i18n %}
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
     <link rel="stylesheet" href="{% static 'CSS/logUsersStyles.css' %}">
-    <title></title>
+    <title>Historial de Cambios - Log Inventory</title>
+    <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
+    <meta name="description" content="Historial Log Inventory">
+    <meta name="author" content="Log Inventory">
+    <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-  <div class="history-container">
-  <div class="history-title">
-    <span>📘</span> Historial de Cambios
-  </div>
-  
-  <div class="timeline">
-    {% for log in log_groups %}
-    <div class="timeline-entry">
-      <div class="entry-time">{{ log.date|time:"H:i" }}, {{log.date |date:"SHORT_DATE_FORMAT"}}</div>
-      <div class="entry-user">{{log.group_changed.name}}</div>
-      <div class="entry-description">
-        {% trans log.description %}
-      </div>
-    </div>
-    {% endfor %}
-    <!-- Más entradas aquí -->
-    </div>
-  </div>
-  <div class="history-container">
-  <div class="history-title">
-    <span>📘</span> Historial de Cambios
-  </div>
-  <div class="timeline">
-    {% for log in log_users %}
-    <div class="timeline-entry">
-      <div class="entry-time">{{ log.date|time:"H:i" }}, {{log.date |date:"SHORT_DATE_FORMAT"}}</div>
-      <div class="entry-user">{{log.user_changed.username}}</div>
-      <div class="entry-description">
-        {% trans log.description %}
-      </div>
-    </div>
-    {% endfor %}
-    <!-- Más entradas aquí -->
-    </div>
-  </div>
-
+   {% include 'Users/sideBar.html' with path='main' profile=profile type=type permissions=permissions %}
+    <main> 
+        <div class="filter-bar container"> 
+            <div class="filter-bar__filter-container row">
+                <label id="subusersLog-label" class="material-symbols-outlined col-md-1 col-0">manage_accounts</label>
+                <label id="subusersgroupsLog-label" class="material-symbols-outlined col-md-1 col-0">groups</label>
+                <label id="objectsLog-label" class="material-symbols-outlined col-md-1 col-3">view_object_track</label>
+                <div class="filter-bar__logo-container col-md-5 col-0">
+                    <img src="{%static '/IMAGES/logo_transparente_blanco.webp'%}" alt="logo" class="logo">
+                </div>
+            </div> 
+        </div>
+        <div class="history-container"> 
+          <div class="history-title">
+            <span class="material-symbols-outlined">event_note</span> Historial de Cambios
+          </div>
+          <div class="timeline">
+            {% for log in log_groups %}
+            <div class="timeline-entry">
+              <div class="entry-time">{{ log.date|time:"H:i" }}, {{log.date |date:"SHORT_DATE_FORMAT"}}</div>
+              <div class="entry-user">{{log.group_changed.name}}</div>
+              <div class="entry-description">
+                {% trans log.description %}
+              </div>
+            </div>
+            {% endfor %}
+            <!-- Más entradas aquí -->
+          </div>
+        </div>
+        <div class="history-container">
+          <div class="history-title">
+            <span class="material-symbols-outlined">event_note</span> Historial de Cambios
+          </div>
+          <div class="timeline">
+            {% for log in log_users %}
+            <div class="timeline-entry">
+              <div class="entry-time">{{ log.date|time:"H:i" }}, {{log.date |date:"SHORT_DATE_FORMAT"}}</div>
+              <div class="entry-user">{{log.user_changed.username}}</div>
+              <div class="entry-description">
+                {% trans log.description %}
+              </div>
+            </div>
+            {% endfor %}
+            <!-- Más entradas aquí -->
+          </div>
+        </div>
+    </main>
 </body>
 </html>
