--- a/templates/Users/password_reset_confirm.html
+++ b/templates/Users/password_reset_confirm.html
@@ -10,8 +10,8 @@
     {%else%}
         <link rel="stylesheet" href="{%static '/CSS/passwordResetStyles.css'%}">
     {%endif%}
-    
-    <title>Cambiar contraseña</title>
+
+    <title>Cambiar contraseña - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Cambio contraseña recuperación cuenta Log Inventory">
     <meta name="author" content="Log Inventory">
