--- a/templates/Users/password_reset_done.html
+++ b/templates/Users/password_reset_done.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="{%static '/CSS/passwordResetDoneStyles.css'%}">
-    <title>Correo enviado</title>
+    <title>Correo enviado - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Envio correo recuperación contraseña Log Inventory">
     <meta name="author" content="Log Inventory">
