--- a/templates/Users/profile.html
+++ b/templates/Users/profile.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
     <link rel="stylesheet" href="{%static '/CSS/profileStyles.css'%}">
-    <title>Perfil</title>
+    <title>Perfil - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Configuración usuario Log Inventory">
     <meta name="author" content="Log Inventory">
