--- a/templates/Users/subprofile.html
+++ b/templates/Users/subprofile.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
     <link rel="stylesheet" href="{%static '/CSS/profileStyles.css'%}">
     <link rel="stylesheet" href="{%static '/CSS/subprofileStyles.css'%}">
-    <title>Usuario</title>
+    <title>Usuario - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Visualización subusuario Log Inventory">
     <meta name="author" content="Log Inventory">
