--- a/templates/Users/subprofiles_group.html
+++ b/templates/Users/subprofiles_group.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
     <link rel="stylesheet" href="{%static '/CSS/subprofilesGroupStyles.css'%}">
     <link rel="stylesheet" href="{%static '/CSS/subusersStyles.css'%}">
-    <title>Manejo de Grupos</title>
+    <title>Manejo de Grupos - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Subusers Groups Log Inventory">
     <meta name="author" content="Log Inventory">
