--- a/templates/Users/subusers.html
+++ b/templates/Users/subusers.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
     <link rel="stylesheet" href="{% static '/CSS/subUsersStyles.css' %}">
-    <title>Manejo de Usuarios</title>
+    <title>Manejo de Usuarios - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Subusers Log Inventory">
     <meta name="author" content="Log Inventory"> 
