--- a/templates/Users/log_users.html
+++ b/templates/Users/log_users.html
@@ -20,9 +20,9 @@
     <main> 
         <div class="filter-bar container"> 
             <div class="filter-bar__filter-container row">
-                <label id="subusersLog-label" class="material-symbols-outlined col-md-1 col-0">manage_accounts</label>
-                <label id="subusersgroupsLog-label" class="material-symbols-outlined col-md-1 col-0">groups</label>
-                <label id="objectsLog-label" class="material-symbols-outlined col-md-1 col-3">view_object_track</label>
+                <label id="subusersLog-label" class="material-symbols-outlined col-2">manage_accounts</label>
+                <label id="subusersgroupsLog-label" class="material-symbols-outlined col-2">groups</label>
+                <label id="objectsLog-label" class="material-symbols-outlined col-2">view_object_track</label>
                 <div class="filter-bar__logo-container col-md-5 col-0">
                     <img src="{%static '/IMAGES/logo_transparente_blanco.webp'%}" alt="logo" class="logo">
                 </div>
@@ -63,5 +63,6 @@
           </div>
         </div>
     </main>
+    <script src="{%static '/SCRIPTS/sidebarScript.js'%}"></script>
 </body>
 </html>
