--- a/static/CSS/profileStyles.css
+++ b/static/CSS/profileStyles.css
@@ -236,6 +236,22 @@ form > div {
     outline: none;
 }
 
+#submit {
+    width: 100%;
+    background-color: var(--fb-color);
+    color: #fff;
+    padding: 10px 45px;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    font-family: Montserrat;;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-top: 10px;
+    cursor: pointer;
+    transition: box-shadow .3s;
+    outline: none;
+}
+
 #open-dialog:hover, dialog input[type="submit"]:hover {
     box-shadow: 7px 7px 0px rgb(100, 166, 231),
                 -7px -7px 0px #335a94;
@@ -255,6 +271,14 @@ dialog {
     border: none;
     font-size: 1.5rem; 
     cursor: pointer;
+}
+
+.hidden {
+    display: none;
+}
+
+.show-password {
+    display: block;
 }
 
 @media (max-width: 900px) {
