--- a/templates/Users/subprofile.html
+++ b/templates/Users/subprofile.html
@@ -7,7 +7,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
     <link rel="stylesheet" href="{%static '/CSS/profileStyles.css'%}">
-    <link rel="stylesheet" href="{%static '/CSS/subprofileStyles.css'%}">
     <title>Usuario</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Visualización subusuario Log Inventory">
@@ -75,16 +74,15 @@
                     {{form_post.errors.group}}
                     {{form.group}}
                 </div>
+                
+                {% if subprofile.user == user %}
+
                 <div class="modify-password">
                     <label for="password_id">Contraseña:</label>
                     {{form_post.errors.password}}
                     <div>
                         <input type='password' name='password_support' id="password_id_support"  placeholder='Password' disabled value='password'>
-                        {% if permissions != 'Estudiante' %}
-                        <input type="checkbox" name="checkbox" title="Cambiar Contraseña"><span class="material-symbols-outlined">edit</span></a>
-                        {% else %}
-                        <input title="Cambiar Contraseña" href="{% url 'change_password' %}"><span class="material-symbols-outlined">edit</span></a>
-                        {% endif %}
+                        <a title="Cambiar Contraseña" href="{% url 'change_password' %}"><span class="material-symbols-outlined">edit</span></a>
                     </div>
                 </div>
                 <input type="checkbox" value="Actualizar">
@@ -99,10 +97,28 @@
                     </div>
                     <button class="material-symbols-outlined" id="close-dialog">Close</button>
                 </dialog>
+                
+                {% else %}
+
+                <div>
+                    <label for="id_new_password1">Contraseña</label>
+                    {{password_form.errors.new_password1}}
+                    <input type="password" name="new_password1" placeholder="Contraseña" maxlength="30" value="passwordNow" id="id_new_password1">
+                </div>
+                <div class="container-password hidden">
+                    <label for="id_new_password2">Confirmación de contraseña:</label>
+                    {{password_form.errors.new_password2}}
+                    <input type="password" name="new_password2" placeholder="Confirmar Contraseña"  maxlength="30"  id="id_new_password2">
+                </div>
+                <input type="submit" id="submit" value="Actualizar">
+
+                {% endif %}
+                
             </form>
         </div>
     </main>
     <script src="{%static '/SCRIPTS/sidebarScript.js'%}"></script>
     <script src="{%static '/SCRIPTS/profileScript.js'%}"></script>
+    <script src="{%static '/SCRIPTS/subprofileScript.js'%}"></script>
 </body>
 </html>
