--- a/templates/Users/subprofile.html
+++ b/templates/Users/subprofile.html
@@ -15,7 +15,7 @@
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    {% include 'Users/sideBar.html' with path='subprofile' profile=profile type=type permissions=permissions %}
+    {% include 'Users/sideBar.html' with path='subprofile' profile=profile type=type permissions=permissions active_subprofile="active"%}
     <main>
         <div class="filter-bar"> 
             <div class="filter-bar__filter-container">
