--- a/templates/Users/subusers.html
+++ b/templates/Users/subusers.html
@@ -15,7 +15,7 @@
     <meta name="robots" content="noindex, nofollow">  
 </head>  
 <body>
-    {% include 'Users/sideBar.html' with path='manage_subusers' profile=profile type=type permissions=permissions%}
+    {% include 'Users/sideBar.html' with path='manage_subusers' profile=profile type=type permissions=permissions active_subusers="active"%}
     <main>
         <div class="filter-bar container"> 
             <div class="filter-bar__filter-container row">
