--- a/templates/Users/main.html
+++ b/templates/Users/main.html
@@ -15,7 +15,7 @@
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    {% include 'Users/sideBar.html' with path='main' profile=profile type=type permissions=permissions %}
+    {% include 'Users/sideBar.html' with path='main' profile=profile type=type permissions=permissions active_objects="active"%}
     <main> 
         <div class="filter-bar container"> 
             <div class="filter-bar__filter-container row">
