--- a/templates/Users/subprofiles_group.html
+++ b/templates/Users/subprofiles_group.html
@@ -16,7 +16,7 @@
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    {% include 'Users/sideBar.html' with path='manage_subusergroups' profile=profile type=type permissions=permissions%}
+    {% include 'Users/sideBar.html' with path='manage_subusergroups' profile=profile type=type permissions=permissions active_subusers="active"%}
     <main>
         <div class="filter-bar container"> 
             <div class="filter-bar__filter-container row">
