Refactor user log retrieval functions for improved clarity and performance; add new profile and subprofile images; update JavaScript for better user interaction; clean up HTML templates by removing unused styles and scripts.

--- a/templates/Users/log_users.html
+++ b/templates/Users/log_users.html
@@ -44,11 +44,10 @@
               </div>
             </div>
             {% endfor %}
-            <!-- Más entradas aquí -->
           </div>
         </div>
         <input type="checkbox" id="subusersgroupsLog" class="filter-bar__checkbox">
-        <div class="history-container subusersgroupsLog">
+        <div class="history-container subusersgroupsLog hidden">
           <div class="history-title">
             <span class="material-symbols-outlined">event_note</span> Historial de Cambios
           </div>
@@ -62,7 +61,6 @@
               </div>
             </div>
             {% endfor %}
-            <!-- Más entradas aquí -->
           </div>
         </div>
     </main>
