--- a/static/CSS/profileStyles.css
+++ b/static/CSS/profileStyles.css
@@ -162,6 +162,7 @@ a.subusers-link span.material-symbols-outlined:hover {
     flex-direction: column;
     padding: 0 40px;
     border-radius: 0 20px 20px 0;
+    overflow-y: auto;
 }
 
 .errorlist {
