Add active_log parameter to sidebar include for user logs

--- a/templates/Users/log_users.html
+++ b/templates/Users/log_users.html
@@ -16,7 +16,7 @@
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-   {% include 'Users/sideBar.html' with path='users_log' profile=profile type=type permissions=permissions %}
+   {% include 'Users/sideBar.html' with path='users_log' profile=profile type=type permissions=permissions active_log="active" %}
     <main> 
         <div class="filter-bar container"> 
             <div class="filter-bar__filter-container row">
