--- a/static/CSS/authenticateStyles.css
+++ b/static/CSS/authenticateStyles.css
@@ -280,11 +280,41 @@ form > h2 {
   opacity: 95%;
 }
 
-.message {
+.message-error {
   display: flex;
   align-items: center;
   justify-content: space-between;
   background-color: #f44336; 
+  color: #fff;
+  padding: 12px 16px;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  box-shadow: 0px 4px 10px rgba(0,0,0,0.15);
+  font-size: 14px;
+  animation: slideIn 0.4s ease-out;
+  transition: opacity .3s ease, transform .3s ease;
+}
+
+.message-success {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #080; 
+  color: #fff;
+  padding: 12px 16px;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  box-shadow: 0px 4px 10px rgba(0,0,0,0.15);
+  font-size: 14px;
+  animation: slideIn 0.4s ease-out;
+  transition: opacity .3s ease, transform .3s ease;
+}
+
+.message-warning {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #FCB426; 
   color: #fff;
   padding: 12px 16px;
   border-radius: 8px;
@@ -306,11 +336,12 @@ form > h2 {
   align-items: center;
 }
 
-.message.hidden {
+.message-error.hidden, .message-success.hidden,.message-warning.hidden {
   opacity: 0;
   transform: translateY(-8px);
   pointer-events: none;
 }
+
 
 @keyframes slideIn {
   from {
@@ -322,7 +353,6 @@ form > h2 {
     transform: translateX(0);
   }
 }
-
 @keyframes move {
     0%, 49.99% {
         opacity: 0;
