--- a/static/CSS/mainStyles.css
+++ b/static/CSS/mainStyles.css
@@ -130,6 +130,92 @@ aside:has(input[type="checkbox"]:checked) ~ main {
     height: calc(100dvh - (2rem + 44.78px));
 } 
 
+.hidden {
+    display: none;
+}
+
+.messages-container {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  max-width: 350px;
+  z-index: 1050; 
+  opacity: 95%;
+}
+
+.message-error {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #f44336; 
+  color: #fff;
+  padding: 12px 16px;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  box-shadow: 0px 4px 10px rgba(0,0,0,0.15);
+  font-size: 14px;
+  animation: slideIn 0.4s ease-out;
+  transition: opacity .3s ease, transform .3s ease;
+}
+
+.message-success {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #080; 
+  color: #fff;
+  padding: 12px 16px;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  box-shadow: 0px 4px 10px #0001;
+  font-size: 14px;
+  animation: slideIn 0.4s ease-out;
+  transition: opacity .3s ease, transform .3s ease;
+}
+
+.message-warning {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #FCB426; 
+  color: #fff;
+  padding: 12px 16px;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  box-shadow: 0px 4px 10px #0001;
+  font-size: 14px;
+  animation: slideIn 0.4s ease-out;
+  transition: opacity .3s ease, transform .3s ease;
+}
+
+.message-close-button {
+  background: transparent;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  font-size: 18px;
+  margin-left: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.message-error.hidden, .message-success.hidden,.message-warning.hidden {
+  opacity: 0;
+  transform: translateY(-8px);
+  pointer-events: none;
+}
+
+
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
 
 /* MEDIA QUERIES */
 
