--- a/templates/Users/main.html
+++ b/templates/Users/main.html
@@ -33,7 +33,23 @@
         </div>
         <div class="objects-area">
         </div>
+        {% if messages %}
+            <div class="messages-container">
+                {% for message in messages %}
+                    <div class="message-{{message.tags}}">
+                        <div class="message-text">
+                            {{ message }}
+                        </div>
+                        <div class="message-close-button" id="message-close-button" role="button" aria-label="Cerrar">
+                            <span class="material-symbols-outlined message-close-button">Close</span>
+                        </div>
+                      </div>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
     </main>
     <script src="{%static '/SCRIPTS/sidebarScript.js'%}"></script>
+    <script src="{% static '/SCRIPTS/mainScript.js' %}"></script>
 </body>
 </html>
