--- a/templates/Users/profile.html
+++ b/templates/Users/profile.html
@@ -84,6 +84,22 @@
                 </dialog>
             </form>
         </div>
+        
+        {% if messages %}
+          <div class="messages-container">
+            {% for message in messages %}
+              <div class="message">
+                  <div class="message-text">
+                    {{ message }}
+                  </div>
+                  <div class="message-close-button" id="message-close-button" role="button" aria-label="Cerrar">
+                    <span class="material-symbols-outlined message-close-button">Close</span>
+                  </div>
+                </div>
+              </div>
+            {% endfor %}
+          </div>
+        {% endif %}
     </main>
     <script src="{%static '/SCRIPTS/sidebarScript.js'%}"></script>
     <script src="{%static '/SCRIPTS/profileScript.js'%}"></script>
