--- a/templates/Users/profile.html
+++ b/templates/Users/profile.html
@@ -88,7 +88,7 @@
         {% if messages %}
           <div class="messages-container">
             {% for message in messages %}
-              <div class="message">
+              <div class="message-{{message.tags}}">
                   <div class="message-text">
                     {{ message }}
                   </div>
